--- a/meta/PKGBUILD
+++ b/meta/PKGBUILD
@@ -9,8 +9,8 @@ pkgdesc="A KeepassXC-proxy command line client"
 depends=('glibc')
 makedepends=('go')
 arch=('aarch64' 'armv7h' 'i686' 'x86_64')
-url="https://gitlab.com/nwwdles/kpxcpc"
-source=("${_pkgname}::git+https://gitlab.com/nwwdles/$_pkgname.git")
+url="https://github.com/junkblocker/kpxcpc"
+source=("${_pkgname}::git+https://github.com/junkblocker/$_pkgname.git")
 sha256sums=('SKIP')
 provides=('kpxcpc')
 conflicts=('kpxcpc')
